--- a/blog-single.html
+++ b/blog-single.html
@@ -75,7 +75,6 @@
 	        	<li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
 	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	        	<li class="nav-item"><a href="courses.html" class="nav-link">Courses</a></li>
-	        	<li class="nav-item"><a href="practice.html" class="nav-link">Practice Tests</a></li>
 	        	<li class="nav-item"><a href="ielts-assessment.html" class="nav-link">IELTS Assessment</a></li>
 	        	<li class="nav-item"><a href="success.html" class="nav-link">Success Stories</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -386,7 +385,7 @@
                 <li><a href="index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
                 <li><a href="about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
                 <li><a href="courses.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Courses</a></li>
-                <li><a href="practice.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Practice Tests</a></li>
+                <li><a href="ielts-assessment.html"><span class="ion-ios-arrow-round-forward mr-2"></span>IELTS Assessment</a></li>
                 <li><a href="contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
               </ul>
             </div>
