--- a/payment-success.html
+++ b/payment-success.html
@@ -27,7 +27,9 @@
     	<div class="container">
     		<div class="row no-gutters d-flex align-items-center align-items-stretch">
     			<div class="col-md-4 d-flex align-items-center py-4">
-    				<a class="navbar-brand" href="index.html">VisaFluent</a>
+            <a class="navbar-brand" href="index.html" style="position: relative;">
+    					<img src="images/logo1.png" alt="VisaFluent" style="height: 250px; width: auto; max-width: 250px; position: fixed; top: -50px; left: 20px; z-index: 1000;">
+    				</a>
     			</div>
 	    		<div class="col-lg-8 d-block">
 		    		<div class="row d-flex">
@@ -60,7 +62,6 @@
 	        	<li class="nav-item"><a href="index.html" class="nav-link pl-0">Home</a></li>
 	        	<li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
 	        	<li class="nav-item"><a href="courses.html" class="nav-link">Courses</a></li>
-	        	<li class="nav-item"><a href="practice.html" class="nav-link">Practice Tests</a></li>
 	        	<li class="nav-item"><a href="ielts-assessment.html" class="nav-link">IELTS Assessment</a></li>
 	        	<li class="nav-item"><a href="success.html" class="nav-link">Success Stories</a></li>
 	          <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
@@ -218,7 +219,7 @@
                 <li><a href="index.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Home</a></li>
                 <li><a href="about.html"><span class="ion-ios-arrow-round-forward mr-2"></span>About</a></li>
                 <li><a href="courses.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Courses</a></li>
-                <li><a href="practice.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Practice Tests</a></li>
+                <li><a href="ielts-assessment.html"><span class="ion-ios-arrow-round-forward mr-2"></span>IELTS Assessment</a></li>
                 <li><a href="contact.html"><span class="ion-ios-arrow-round-forward mr-2"></span>Contact</a></li>
               </ul>
             </div>
